--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_screenutil: ^5.7.0
   http: ^0.13.6
   flutter_svg: ^2.0.5
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.2.3
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
