--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   curved_navigation_bar: ^1.0.3
+  get: ^4.6.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
